--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-< <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -12,7 +12,7 @@
     <div class="content">
         <section class="Top_section">
             <div class="image_container">
-                <img src="./apj abdul.1.jpg" alt="tribute" />
+                <img src="./apj_abdul.1.jpg" alt="tribute" />
             </div>
             <div>
                 <h1>A.P.J Abdul Kalam </h1>
@@ -50,5 +50,6 @@
    </div>
 </body>
 </html> 
+
 
 
