--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> The Tribute page</title>
-    <link rel="stylesheet" href="tribute.css"
+    <link rel="stylesheet" href="tribute.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
     <div class="content">
         <section class="Top_section">
             <div class="image_container">
-                <img src="./apj_abdul.1.jpg" alt="tribute" />
+              <img src="./abdul.jpg" alt="APJ ABDUL KALAM" />
             </div>
             <div>
                 <h1>A.P.J Abdul Kalam </h1>
@@ -24,7 +24,7 @@
                 <p><b>Avul Pakir Jainulabdeen Abdul Kalam</b> was born on 15 October 1931 to a Tamil Muslim family in the pilgrimage centre of Rameswaram on Pamban Island, then in the Madras Presidency and now in the State of Tamil Nadu. His father Jainulabudeen was a boat owner and imam of a local mosque; his mother Ashiamma was a housewife. Kalam was the youngest of four brothers and one sister in his family. In his school years, Kalam had average grades but was described as a bright and hardworking student who had a strong desire to learn. He spent hours on his studies, especially mathematics. After completing his education at the Ramanathapuram Schwartz Matriculation School, Kalam went on to attend Saint Joseph's College, Tiruchirappalli, from where he graduated in physics in 1954. He moved to Madras in 1955 to study aerospace engineering in Madras Institute of Technology. He narrowly missed achieving his dream of becoming a fighter pilot, as he placed ninth in qualifiers, and only eight positions were available in the IAF.</p>
         </section>
         <section class="Career_as_a_scientist">
-                <h4>CAREER AS A SCIENTISTt</h4>
+                <h4>CAREER AS A SCIENTIST</h4>
                 <p>After graduating from the Madras Institute of Technology in 1960, Kalam joined the Aeronautical Development Establishment of the Defence Research and Development Organisation (DRDO) as a scientist. He was also part of the INCOSPAR committee working under Vikram Sarabhai. In 1969, Kalam was transferred to the Indian Space Research Organisation (ISRO) where he was the project director of India's first Satellite Launch Vehicle (SLV-III) which successfully deployed the Rohini satellite in near-earth orbit in July 1980. Between the 1970s and 1990s, Kalam made an effort to develop the Polar Satellite Launch Vehicle (PSLV) and SLV-III projects, both of which proved to be successful.</p>
             </section>
         <section class="Presidency">
@@ -33,7 +33,7 @@
             </section>
         
         <section class="Personal_life">
-                <h4>PPERSONAL LIFE</h4>
+                <h4>PERSONAL LIFE</h4>
                 <p>Kalam was the youngest of five siblings. He was noted for his integrity and his simple lifestyle. He never owned a television, and was in the habit of rising at 6:30 or 7 a.m and sleeping by 2 a.m. His few personal possessions included his books, his veena, some articles of clothing, a CD player and a laptop. Religion and spirituality were very important to Kalam throughout his life. A proud and practicing Muslim, daily namāz and fasting during Ramadan were integral to Kalam's life. He read the Bhagavad Gita and he was a vegetarian. Kalam also enjoyed writing Tamil poetry, playing the veena, and listening to Carnatic devotional music every day.</p>
             </section>
 
@@ -50,6 +50,7 @@
    </div>
 </body>
 </html> 
+
 
 
 
